// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#useMovie handles null data 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "movie": Object {},
}
`;

exports[`#useMovie search and return data 1`] = `"https://api.themoviedb.org/3/movie/1?api_key=undefined"`;

exports[`#useMovie search and return data 2`] = `
Object {
  "error": null,
  "isLoading": false,
  "movie": Object {
    "backdrop": "https://image.tmdb.org/t/p/w1280/backdrop.jpg",
    "backdrop_path": "/backdrop.jpg",
    "cast": Array [
      Object {
        "image": "https://image.tmdb.org/t/p/w185/profile.jpg",
        "name": "one",
        "profile_path": "/profile.jpg",
      },
    ],
    "crew": Array [
      Object {
        "image": null,
        "name": "two",
      },
    ],
    "poster": "https://image.tmdb.org/t/p/w300/poster.jpg",
    "poster_path": "/poster.jpg",
    "title": "test",
  },
}
`;

exports[`#useSearch handles null data 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "movies": Array [],
}
`;

exports[`#useSearch search and return data 1`] = `"https://api.themoviedb.org/3/search/movie?api_key=undefined&query=inception"`;

exports[`#useSearch search and return data 2`] = `
Object {
  "error": null,
  "isLoading": false,
  "movies": Array [
    Object {
      "backdrop": "https://image.tmdb.org/t/p/w1280/backdrop.jpg",
      "backdrop_path": "/backdrop.jpg",
      "poster": "https://image.tmdb.org/t/p/w300/poster.jpg",
      "poster_path": "/poster.jpg",
      "title": "test",
    },
    Object {
      "backdrop": null,
      "backdrop_path": null,
      "poster": null,
      "poster_path": null,
      "title": "test",
    },
  ],
}
`;
